samples/_failures_safe/1761257060_3546d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_614fbbcf.c: In function ‘main’:
./samples/SAFE/__tmp_614fbbcf.c:130:13: error: expected declaration or statement at end of input
  130 |             }
      |             ^
./samples/SAFE/__tmp_614fbbcf.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_614fbbcf.c:130:13: error: expected declaration or statement at end of input
